# pdm-mono

./: README.md  pyproject.toml
greet-cli/: main.py  pyproject.toml
